--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>21 - Physics</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <!-- <h1>Physics Collides System</h1>
+      <p>
+        In physics, a collision takes place when particles, aggregates of
+        particles, or solid bodies move toward each other and come near enough
+        to interact
+      </p> -->
+    </div>
+    <div class="container">
+      <!-- <h1>Physics Collides System</h1>
+      <p>
+        In physics, a collision takes place when particles, aggregates of
+        particles, or solid bodies move toward each other and come near enough
+        to interact
+      </p> -->
+    </div>
     <canvas class="webgl"></canvas>
+
     <script type="module" src="./script.js"></script>
-</body>
+  </body>
 </html>
